@@ -920,7 +920,7 @@ testall:	all platform
 		$(TESTPYTHON) $(TESTPROG) -uall $(TESTOPTS)
 
 teststackless:	all platform
-		pushd Stackless/unittests; $(RUNSHARED) ../../$(BUILDPYTHON) -E -tt runAll.py; popd
+		$(TESTPYTHON) Stackless/unittests/runAll.py
 
 #  Run the unitests for both architectures in a Universal build on OSX
 #  Must be run on an Intel box.
