@@ -78,7 +78,8 @@ class LingeringThread(threading.Thread):
 
     def join(self):
         self.shutdown.set()
-        return super(LingeringThread, self).join()
+        super(LingeringThread, self).join()
+        time.sleep(0.01)  # give the thread a chance to clean up
 
     def __enter__(self):
         pass
@@ -346,6 +347,7 @@ class DeadThreadTest(RemoteTaskletTests):
         theThread, t = self.create_thread_task()
         self.assertTrue(t.alive)
         theThread.join()
+        time.sleep(0.01)  # give the thread a short time to clean up
         # now the tasklet should have been killed.
         self.assertFalse(t.alive)
 
@@ -355,6 +357,7 @@ class DeadThreadTest(RemoteTaskletTests):
         t.remove()
         self.assertFalse(t.scheduled)
         theThread.join()
+        time.sleep(0.01)  # give the thread a short time to clean up
         # now the tasklet should have been killed.
         self.assertFalse(t.alive)
 
